objects/Quote_Team_Member__c.object
<CustomObject>
    <description>R5 - Object Created to add Quote team to Quotes as per Req#2503</description>
    <fields>
        <fullName>APTS_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Quotation__r.Id  , IF( NOT( ISBLANK( Quotation__r.APTS_External_Revision__c ) ) , 
Quotation__r.APTS_Quotation_Number_Internal__c + &quot;.&quot; + Quotation__r.APTS_External_Revision__c, 

Quotation__r.APTS_Quotation_Number_Internal__c 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Level__c</fullName>
        <description>R5 - Quote team member access level</description>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>This field is pre-populated from the Quotation. Please do not change this.</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>CASESAFEID(Quotation__r.Apttus_Proposal__Opportunity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Ownerid__c</fullName>
        <formula>CASESAFEID(Quotation__r.Apttus_Proposal__Opportunity__r.OwnerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Ownerid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_changed_on_quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5-indicates if the quote&apos;s opportunity was changed in the CQP application. Based on this checkbox the team members will be synced with the new opportunity team.</description>
        <label>Oppty changed on quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quotation__c</fullName>
        <label>Quotation</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Quote Team Members</relationshipLabel>
        <relationshipName>Quote_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote_RecordType_Id__c</fullName>
        <formula>CASESAFEID(Quotation__r.RecordTypeId)</formula>
        <label>Quote RecordType Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This will be checked if you want to send email to the user. Email will be sent only when the record is created.</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <description>R5 - Team Role of the Quote team member</description>
        <label>Member Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Service Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAM/SAM Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Sales Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Look up to User</description>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quote Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QTM-{000000}</displayFormat>
        <label>Quote Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>